# TextGO

./: .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc  LICENSE  LICENSES.md  README.md  README.zh-CN.md  eslint.config.js  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.js
.github/workflows/: release.yml
licenses/: .gitignore  LICENSES.md  generator.ts
messages/: en.json  zh-cn.json
project.inlang/: project_id  settings.json
scripts/: .gitignore  generate-licenses.ts  readme.ts  scan-packages.ts  sync-readme.ts  sync-version.ts  sync-versions.ts  update-readme.ts
src/: app.css  hooks.server.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  error.rs  lib.rs  main.rs  platform.rs
src-tauri/src/commands/: accessibility.rs  clipboard.rs  cursor.rs  executor.rs  keyboard.rs  mod.rs  popup.rs  selection.rs  shortcut.rs  tray.rs  typer.rs  ui.rs  window.rs
src-tauri/src/platform/: macos.rs  mod.rs  windows.rs
src/lib/: classifier.ts  clipboard.ts  constants.ts  constraint.ts  executor.ts  helpers.ts  manager.ts  matcher.ts  states.svelte.ts  stores.svelte.ts  types.d.ts  utils.ts
src/lib/components/: Alert.svelte  Binder.svelte  Button.svelte  CodeMirror.svelte  Confirm.svelte  Hotkey.svelte  Kbd.svelte  Label.svelte  List.svelte  Modal.svelte  Model.svelte  Prompt.svelte  Recorder.svelte  Regexp.svelte  Rule.svelte  Script.svelte  Select.svelte  Setting.svelte  Shortcut.svelte  Title.svelte  index.ts
src/lib/icons/: GitHub.svelte  JavaScript.svelte  Keyboard.svelte  LMStudio.svelte  Markdown.svelte  Moon.svelte  NoData.svelte  Ollama.svelte  Python.svelte  Regexp.svelte  Sun.svelte  Tensorflow.svelte  index.ts
src/routes/: +layout.svelte  +layout.ts  +page.svelte
src/routes/(main)/: +layout.svelte
src/routes/(main)/histories/: +layout.svelte  +page.svelte
src/routes/(main)/histories/[id]/: +page.svelte
src/routes/(main)/histories/[record]/: +page.svelte
src/routes/(main)/settings/: +layout.svelte  +page.svelte
src/routes/(main)/settings/general/: +page.svelte
src/routes/(main)/settings/model/: +page.svelte
src/routes/(main)/settings/prompt/: +page.svelte
src/routes/(main)/settings/regexp/: +page.svelte
src/routes/(main)/settings/script/: +page.svelte
src/routes/(main)/shortcuts/: +page.svelte
src/routes/popup/: +page.svelte
static/: model.json
