[package]
name = "text-go"
version = "1.0.0"
description = "Smart shortcuts to boost your productivity"
authors = ["Xylitol <jam.xylitol@gmail.com>"]
license = "MIT"
edition = "2021"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "textgo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
tauri = { version = "2.8.5", features = [ "tray-icon"] }
tauri-plugin-os = "2.3.1"
tauri-plugin-store = "2.4.0"
tauri-plugin-opener = "2.5.0"
tauri-plugin-clipboard-manager = "2.3.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48", features = ["process", "rt-multi-thread"] }
enigo = "0.6.1"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2.3.0"
