[package]
name = "text-go"
version = "0.1.9"
description = "Auto-detect text types and trigger custom actions with one hotkey."
authors = ["Xylitol <jam.xylitol@gmail.com>"]
license = "MIT"
edition = "2021"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "textgo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.2", features = [] }

[dependencies]
tauri = { version = "2.9.3", features = ["tray-icon"] }
tauri-plugin-os = "2.3.2"
tauri-plugin-store = "2.4.1"
tauri-plugin-dialog = "2.4.2"
tauri-plugin-opener = "2.5.2"
tauri-plugin-log = { version = "2.7.1", features = ["colored"] }
log = "0.4.28"
fern = "0.7.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48", features = ["process", "rt-multi-thread"] }
enigo = "0.6.1"
clipboard-rs = "0.3.1"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2.5.1"
tauri-plugin-global-shortcut = "2.3.1"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10.1"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = ">=0.59.0, <=0.62.2", features = [
  "Win32_System_Com",
  "Win32_UI_Accessibility",
] }
